--- a/~/.config/qutebrowser/start-page.html
+++ b/~/.config/qutebrowser/start-page.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html><head><title>Start Page</title></head>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Start Page</title>
+  </head>
   <body>
     <h4>Daily</h4>
     <ul>
